<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reading List</string>
    <string name="action_settings">Settings</string>
    <string name="toast_title">Hello world!</string>
     <string name="menu_updates">Data Updates</string>
      <string name="menu_add">Add Data12</string>
     <string name="LoadData">Load Data</string>
     <string name="password_hint">Enter Password</string>
      <string name="OK">OK</string>
       <string name="Done">donebutton</string>
       <string name="label3">Parent:</string>
           <string name="label2">Last:</string>
          <string name="label1">First:</string>
  <string name="signin_label">Sign In</string> 
  <string name="signout_label">Sign Out</string> 
    <string name="student_label">Sign In</string> 
  <string name="parent_label">Sign Out</string> 
  
           
      
     <string name="cancel">Cancel</string>
</resources>