<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <TextView android:id="@+id/studentLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/student_label"
    style="?android:listSeparatorTextViewStyle"
    />
    <TextView android:id="@+id/parentLabel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/parent_label"
    style="?android:listSeparatorTextViewStyle"
    />

  <CheckBox android:id="@+id/signin_chk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/signin_label"
    />
   <CheckBox android:id="@+id/signout_chk"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/signout_label"
    />
   
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OK"
        android:id="@+id/donebutton"/>
    

        
</LinearLayout>


